src/objects/Family_Link_Rx_Medication__c.object
<CustomObject>
    <description>US2841187- this object will give the ability to view a family&apos;s medication in SENS and Family Link</description>
    <fields>
        <fullName>Directions__c</fullName>
        <description>This will give instructions on how to use the medication</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Directions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will link the Rx Medication to a family</description>
        <label>Family</label>
        <referenceTo>Family_Overview__c</referenceTo>
        <relationshipLabel>Family Link Rx Medications</relationshipLabel>
        <relationshipName>Family_Link_Rx_Medications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Phone_Number__c</fullName>
        <description>This will hold the phone number for the pharmacy that fills the prescription</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pharmacy__c</fullName>
        <description>This will hold the pharmacy name that filled the prescription</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pill_Size__c</fullName>
        <description>This will show the pill size for the medication</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pill Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refill_Date__c</fullName>
        <description>This will hold the refill date on the Rx medication</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Refill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rx_Number__c</fullName>
        <description>This will contain the id number for the prescription</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This will determine whether the Rx Medication is active or not</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Family Link Rx Medication</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Link Rx Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PhoneNumberValidation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(Pharmacy_Phone_Number__c) &amp;&amp; !ISNULL(Pharmacy_Phone_Number__c) &amp;&amp; NOT ( REGEX(Pharmacy_Phone_Number__c, &quot;[&lt;|&gt;]?[0-9,]+&quot;))</errorConditionFormula>
        <errorDisplayField>Pharmacy_Phone_Number__c</errorDisplayField>
        <errorMessage>Please enter a valid phone number.</errorMessage>
    </validationRules>
</CustomObject>